2020-01-24  Mikey Austin  <mikey@greyd.org>

	* Added new log_to_file configuration

2020-01-23  Mikey Austin  <mikey@greyd.org>

	* Fix bug in proxy initialization
	* Added container support

2020-01-01  Mikey Austin  <mikey@greyd.org>

	* Fix bug in sync module hmac ctx cleanup
	* Added new -F (foreground) option to greyd

2020-01-01  Mikey Austin  <mikey@greyd.org>

	* Updated sync module to work with earlier < 1.1 versions of openssl

2019-12-30  Mikey Austin  <mikey@greyd.org>

	* Updated netfilter driver to work with the latest ipset 7+

2019-12-30  Mikey Austin  <mikey@greyd.org>

	* New proxy protocol support

2015-06-26  Mikey Austin  <mikey@greyd.org>

	* Fixed race between grey & main processes with the fw pipe

2015-06-22  Mikey Austin  <mikey@greyd.org>

	* Added configuration options/docs for max_cons & max_cons_black
	* Decoupled setrlimit from debug config option

2015-06-08  Mikey Austin  <mikey@greyd.org>

	* Added proxy support to greyd-setup
	* Added spamd sync compatability
	* Extended sync to sync white/trap deletions via greydb
	* Fixed bugs in netfilter & sqlite drivers
	* Bumped sync protocol version to 2 (incompatible with previous releases)
	* Modified sqlite driver to auto retry commits & begins when db is busy

2015-05-10  Mikey Austin  <mikey@greyd.org>

	* New blacklist PATRICIA trie storage for fast lookups
	* New BDB SQL, SQLite & MySQL storage drivers
	* Updated documentation for new drivers
	* Bug fixes.

2015-03-12  Mikey Austin  <mikey@greyd.org>

	* Hash performance tuning.
	* Added --with-ltdl-fix for distros with broken libltdl (credit to Ivan Agarkov (kreon))
	* Updated sync slave debug messages to be less chatty

2015-03-08  Mikey Austin  <mikey@greyd.org>

	* Minor internal refactoring & cleanups.
	* Cleanup the test framework and added support for unit testing through valgrind.
	* Added RPM packaging capabilities to build system.
	* Added RHEL-based init scripts.
	* Minor bug fixes & updates to default configuration file.